# CSCK507_NaturalLanguageProcessingAndUnderstanding

./: README.md  Seq2Seq without attention.py  pyproject.toml
Data processing/: index2word.pkl  preprocessing_and_split.ipynb
Model/: Chat.py  Chat_Model.py  Model_Utils.py  README.md
Seq2Seq2 Model Without Attention/: Seq2Seq without attention.py
chatbot/: main.py
data/: DATASET_PROCESSED.csv
results/: evaluation_results_20250730_215150.txt  evaluation_results_20250731_203819.txt  evaluation_results_20250802_000110.txt
src/: evals.py  main.py
src/chatbot/: chat.py  main.py
src/data/: DATASET_PROCESSED_last.csv  index2word_last.pkl  word2index.pkl  word2index_last.pkl
src/dependencies/: attention_dependencies.py  natt_model.py  no_attention_dependencies.py
src/models/: Chat_Model.py  Seq2Seq without attention.py  Seq2Seq_with_attention.py  Seq2Seq_without_attention.py  data_utils.py
src/notebooks/: preprocessing_and_split.ipynb
src/results/: evaluation_results_20250730_221325.txt  evaluation_results_20250802_140637.csv  evaluation_results_20250802_141306.csv  evaluation_results_20250802_141306.txt  evaluation_results_20250802_144548.csv  evaluation_results_20250802_144548.txt  training_log_attention_20250802_140347.csv  training_log_no_attention_20250802_133629.csv  training_log_no_attention_20250802_144237.csv
src/scripts/: Chat.py  Seq2Seq_with_attention.py  Seq2Seq_without_attention.py  evals.py  evals_plotting.py
src/utils/: chat.py  device_config.py  encoder_no_attention.py  hyperparameters.py  luiong_attention.py  model_utils.py  (+2 more)
(+20 files in other folders)
