[project]
name = "csck507-naturallanguageprocessingandunderstanding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "ruff>=0.12.4",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
    "torch>=2.3.0",
    "spacy>=3.8.0"
]
